# rust_axum_backend

./: Cargo.toml
src/: main.rs
src/routes/: custom_header.rs  custom_middleware.rs  example_body_json.rs  example_post.rs  extract_header.rs  mod.rs  path_variable.rs  query_params.rs  shared_middleware.rs
